UX: Overview alignment of items fixed

--- a/ui/src/containers/Client.scss
+++ b/ui/src/containers/Client.scss
@@ -4,6 +4,8 @@
   flex: 1;
   flex-direction: column;
   display: flex;
+  padding-left:25px;
+  padding-right:25px;
 
   .breadcrumb {
     margin-bottom: 10px;
@@ -13,7 +15,13 @@
     flex: 1 100%;
     display: flex;
     flex-direction: column;
+    margin-left:-15px;
   }
+
+  .nav-tabs {
+    border-bottom: 1px solid #ededed;  
+  }
+  
   
   #basic-tabs-content {
     flex: 1 100%;
@@ -47,3 +55,4 @@
     }
   }
 }
+
